{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 5,
  "lineage": "dd92669d-80b2-efcc-b53c-09fc09053991",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:074095961179:security-group/sg-0fcef1ead41e2c0fc",
            "description": "this first sg using tf",
            "egress": [],
            "id": "sg-0fcef1ead41e2c0fc",
            "ingress": [],
            "name": "tf-sg",
            "name_prefix": "",
            "owner_id": "074095961179",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-sg-day3"
            },
            "tags_all": {
              "Name": "tf-sg-day3"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ca82e6bbdad5b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074095961179",
            "id": "sg-0fcef1ead41e2c0fc",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:074095961179:security-group/sg-0460954b62e7fc9c4",
            "description": "this first sg using tf",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0460954b62e7fc9c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "this for the Http acces",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "103.123.48.148/32"
                ],
                "description": "this for the ssh acces",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-sg2",
            "name_prefix": "",
            "owner_id": "074095961179",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-sg2-day3"
            },
            "tags_all": {
              "Name": "tf-sg2-day3"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ca82e6bbdad5b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074095961179",
            "id": "sg-0460954b62e7fc9c4",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:074095961179:security-group-rule/sgr-0692cf9b1388585d3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "this for the outbound acces to the sg",
            "from_port": null,
            "id": "sgr-0692cf9b1388585d3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0fcef1ead41e2c0fc",
            "security_group_rule_id": "sgr-0692cf9b1388585d3",
            "tags": {
              "Name": "outbound-acess"
            },
            "tags_all": {
              "Name": "outbound-acess"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074095961179",
            "id": "sgr-0692cf9b1388585d3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.tf-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:074095961179:security-group-rule/sgr-06404312c17f66278",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "this for the https rule",
            "from_port": 443,
            "id": "sgr-06404312c17f66278",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0fcef1ead41e2c0fc",
            "security_group_rule_id": "sgr-06404312c17f66278",
            "tags": {
              "Name": "allow-https"
            },
            "tags_all": {
              "Name": "allow-https"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074095961179",
            "id": "sgr-06404312c17f66278",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.tf-sg"
          ]
        }
      ]
    }
  ]
}